@@ -9,6 +9,12 @@ dependencies {
     implementation 'org.apache.flink:flink-streaming-java:1.20.1'
     implementation 'org.apache.flink:flink-clients:1.20.1'
     implementation 'org.apache.flink:flink-connector-kafka:3.3.0-1.20'
+    implementation 'org.apache.flink:flink-metrics-prometheus:1.20.1'
+
+    implementation 'com.clickhouse:clickhouse-jdbc:0.6.0'
+    implementation 'org.apache.flink:flink-connector-jdbc:3.3.0-1.20'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
+    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
@@ -22,4 +28,11 @@ dependencies {
 
 application {
     mainClass = 'com.hyuk.settlement.analytics.AdAnalyticsJob'
+}
+
+tasks.named('run', JavaExec) {
+    jvmArgs += [
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.time=ALL-UNNAMED'
+    ]
 }
